[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/m5x7/SmallTextTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/misc/debug/DebugConsole.gd" type="Script" id=2]

[node name="DebugConsole" type="CanvasLayer"]
pause_mode = 2

[node name="DebugConsole" type="Control" parent="."]
script = ExtResource( 2 )

[node name="Console" type="VBoxContainer" parent="DebugConsole"]
margin_left = 192.0
margin_right = 896.0
margin_bottom = 264.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="OutputBox" type="TextEdit" parent="DebugConsole/Console"]
margin_right = 704.0
margin_bottom = 220.0
rect_min_size = Vector2( 704, 220 )
focus_mode = 0
text = "Debug Console"
readonly = true

[node name="InputBox" type="LineEdit" parent="DebugConsole/Console"]
margin_top = 224.0
margin_right = 704.0
margin_bottom = 260.0
rect_min_size = Vector2( 704, 30 )
placeholder_text = "Enter Command..."
placeholder_alpha = 0.4

[connection signal="text_entered" from="DebugConsole/Console/InputBox" to="DebugConsole" method="_on_InputBox_text_entered"]
